--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,6 +1,4 @@
 /* src/assets/tailwind.css */
-
-
 @layer tailwind-base, primevue, tailwind-utilities;
 
 @layer tailwind-base {
@@ -10,4 +8,12 @@
 @layer tailwind-utilities {
     @tailwind components;
     @tailwind utilities;
+}
+
+body {
+    @apply bg-gray-900 text-white border-white;
+
+}
+.p-panel-header {
+    @apply text-white;
 }
